# PyFinDash

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
backend/: Dockerfile  app.py  main.py
backend/utils/: news.py  nsedata.py  scanner.py  stockedge.py
frontend/: Dockerfile  package-lock.json  package.json
src/: app.py  style.css
tests/: testing.py
